Tue Mar 23 19:28:41 1999  George Lebl  <jirka@5z.com>

	* gnome-score.c,gnome-exec.c,gnome-entry.c: stuff that is allocated
	  with g_malloc has to be free'd with g_free and vice versa

Sun Mar 21 00:53:26 1999  George Lebl  <jirka@5z.com>

	* gnome-fileconvert.c: include string.h

Sat Mar 20 00:52:41 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: doh! the last segfault fix, wasn't a segfault fix,
	  the code was correct before, however I fixed a couple of memleaks
	  anyway

Fri Mar 19 12:53:11 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: when we want to reread the file when it was changed
	  on disk we must wipe our current memory of it, dropping files
	  caused a possible segfault and current wasn't reset when we
	  dropped all.

	* parse-path.cP: when we set pp->file to the error string, don't free
	  it when releasing the path

1999-03-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* Makefile.am (libgnome_la_LDFLAGS): Updated library version number.

1999-03-18  James Henstridge  <james@daa.com.au>

	* Makefile.am (gnome_moz_remote_LDADD): removed -lXmu and -lXt.  I
	don't know why it was linking with Xt before.

	* gnome-moz-remote.c: made a number of changes so that when local URLs
	(ie. file: ones) are given on the command line only local copies of
	mozilla are used to display them.  Also fixed up the client window
	search a bit.  It now uses the GNOME WM hints if available, otherwise
	using recursive XQueryTree calls.  This also removes the dependency
	on libXmu (which isn't available on HP-UX unless you compile X
	yourself).

Tue Mar 16 22:39:04 1999  Tim Janik  <timj@gtk.org>

	* libgnome.h: 
	* gnomelib-init.c:
	(gnomelib_init): 
	(create_user_gnome_directories):
	setup and mkdir gnome_user_accels_dir as ~/.gnome/accels, this is used
	for applications to save their accelerators.

1999-03-12  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime-info.c (context_destroy_and_unlink): Splited from