@@ -1,3 +1,7 @@
+1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-fileconvert.c (gnome_file_convert): Make const correct.
+	
 Tue Mar 23 19:28:41 1999  George Lebl  <jirka@5z.com>
 
 	* gnome-score.c,gnome-exec.c,gnome-entry.c: stuff that is allocated
